Do upgrade / downgrade lock dance properly
Fixes: #34601

Co-authored-by: David M. Lloyd <david.lloyd@redhat.com>